<resources>
    <string name="app_name">My Application</string>
    <string name="sherifbtn">Sheriff</string>
    <string name="saloonbtn">Saloon</string>
    <string name="shake">Shake</string>
    <string name="Blacksmith">Blacksmith</string>
    <string name="yellow">Yellow</string>


    <string name="backup">Call for backup!</string>
    <string name="warn">Warn the townspeople</string>

</resources>